--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@
     ></script>
   </head>
   <body>
-    <app-root></app-root>
+    <div class="container">
+      <app-root></app-root>
+    </div>
   </body>
 </html>
